public/demo-8/assets/css/main.css
/* ... */
.header-1 .menu-right-info .number-info {
  display: flex;
  align-items: center;
  gap: 8px;
}
@media (max-width: 1199px) {
  .header-1 .menu-right-info .number-info {
    display: none;
  }
}
.header-1 .menu-right-info .number-info .number {
  display: inline-block;
  font-weight: 600;
  font-size: 18px;
}
.header-1 .menu-right-info .number-info .number:hover {
  color: var(--theme);
}
.header-1 .menu-right-info .appo-btn {
  display: inline-block;
  background-color: var(--theme);
  height: 60px;
  line-height: 60px;
  text-align: center;
  border-radius: 64px;
  font-size: 16px;
  text-transform: capitalize;
  font-weight: 600;
  padding: 0 25px;
  color: var(--white);
  transition: all 0.4s ease-in-out;
}
@media (max-width: 1399px) {
  .header-1 .menu-right-info .appo-btn {
    display: none;
  }
}
.header-1 .menu-right-info .appo-btn img {
  margin-right: 6px;
}
.header-1 .menu-right-info .appo-btn:hover {
  background-color: #000;
}
.header-1 .navbar-collapse {
  flex-grow: initial;
}
.header-1 .navbar-expand-xl .navbar-collapse {
  justify-content: end;
  width: 100%;
  gap: 60px;
}
@media (max-width: 1399px) {
  .header-1 .navbar-expand-xl .navbar-collapse {
    gap: 30px;
  }
}

.header-2 {
  background-color: transparent;
  border-bottom: 1px solid rgba(0, 84, 110, 0.2);
}

.header-3 {
  padding: 0 50px;
  background-color: transparent;
  padding-top: 15px;
}
@media (max-width: 1899px) {
  .header-3 {
    padding-left: 30px;
    padding-right: 30px;
  }
}
.header-3 .header-main {
  background: rgba(3, 175, 229, 0.2);
  border-radius: 100px;
  backdrop-filter: blur(10px);
  padding: 18px 30px;
}
.header-3 .header-main .navbar .navbar-nav .nav-item .nav-link {
  color: #fff;
}
.header-3 .header-main .navbar .navbar-nav .nav-item .nav-link:hover {
  color: #03AFE5;
}
.header-3 .number-info .number {
  color: #fff;
}
.header-3 .number-info .number:hover {
  color: #03AFE5;
}
.header-3 .sidebar__toggle span {
  background-color: #fff;
}
.header-3 .header-main .navbar .navbar-nav .nav-item > .sub-menu {
  top: 160%;
}
.header-3 .header-main .navbar .navbar-nav .nav-item .has-homemenu {
  top: 130%;
}

.breadcrumb-wrapper {
  position: relative;
  overflow: hidden;
  z-index: 9;
  border-radius: 20px;
  margin: 0 100px;
  margin-top: 100px;
}
@media (max-width: 1600px) {
  .breadcrumb-wrapper {
    margin: 0 50px;
  }
}
@media (max-width: 1399px) {
  .breadcrumb-wrapper {
    margin: 0 30px;
  }
}
@media (max-width: 1199px) {
  .breadcrumb-wrapper {
    margin: 0 20px;
  }
}
.breadcrumb-wrapper .page-heading {
  position: relative;
  padding: 120px 0 120px;
  z-index: 9;
  text-align: center;
}
@media (max-width: 1199px) {
  .breadcrumb-wrapper .page-heading {
    text-align: center;
    padding-top: 150px;
    padding-bottom: 100px;
  }
}
.breadcrumb-wrapper .page-heading h1 {
  color: var(--white);
  font-size: 65px;
  position: relative;
  z-index: 9;
  font-weight: 700;
}
@media (max-width: 767px) {
  .breadcrumb-wrapper .page-heading h1 {
    font-size: 60px;
  }
}
@media (max-width: 575px) {
  .breadcrumb-wrapper .page-heading h1 {
    font-size: 50px;
  }
}
@media (max-width: 470px) {
  .breadcrumb-wrapper .page-heading h1 {
    font-size: 40px;
  }
}
.breadcrumb-wrapper .page-heading .breadcrumb-items {
  display: flex;
  align-items: center;
  margin-top: 20px;
  gap: 10px;
  justify-content: center;
}
@media (max-width: 575px) {
  .breadcrumb-wrapper .page-heading .breadcrumb-items {
    margin-top: 15px;
  }
}
.breadcrumb-wrapper .page-heading .breadcrumb-items li {
  color: var(--white);
  text-transform: capitalize;
  font-weight: 600;
  font-size: 16px;
}
.breadcrumb-wrapper .page-heading .breadcrumb-items li a {
  color: var(--white);
  transition: all 0.4s ease-in-out;
}
.breadcrumb-wrapper .page-heading .breadcrumb-items li a i {
  color: var(--theme);
  margin-right: 9px;
}
.breadcrumb-wrapper .page-heading .breadcrumb-items li a:hover {
  color: var(--white);
  opacity: 1;
}
.breadcrumb-wrapper .page-heading .breadcrumb-items li a i {
  color: var(--theme);
  margin-right: 5px;
}
.breadcrumb-wrapper .page-heading .breadcrumb-items li i {
  color: var(--white);
}

.error-wrapper {
  text-align: center;
}
.error-wrapper .error h2 {
  color: var(--theme);
  font-size: 350px;
  line-height: 1;
}
@media (max-width: 1199px) {
  .error-wrapper .error h2 {
    font-size: 140px;
  }
}
@media (max-width: 991px) {
  .error-wrapper .error h2 {
    font-size: 130px;
  }
}
@media (max-width: 575px) {
  .error-wrapper .error h2 {
    font-size: 100px;
  }
}
.error-wrapper .error-content h2 {
  font-size: 72px;
}
@media (max-width: 1199px) {
  .error-wrapper .error-content h2 {
    font-size: 60px;
  }
}
@media (max-width: 991px) {
  .error-wrapper .error-content h2 {
    font-size: 50px;
  }
}
@media (max-width: 575px) {
  .error-wrapper .error-content h2 {
    font-size: 30px;
  }
}
.error-wrapper .error-content h2 span {
  color: var(--theme);
}
.error-wrapper .error-content p {
  margin-top: 22px;
}
.error-wrapper .error-btn {
  margin-top: 45px;
}

.footer-widget-wrapper {
  position: relative;
  z-index: 9;
  padding: 120px 0 0;
}
@media (max-width: 991px) {
  .footer-widget-wrapper {
    padding: 80px 0 0;
  }
}
.footer-widget-wrapper .footer-left-item {
  overflow: hidden;
  position: relative;
  z-index: 99;
}
@media (max-width: 991px) {
  .footer-widget-wrapper .footer-left-item {
    margin-bottom: 40px;
  }
}
.footer-widget-wrapper .footer-left-item h2 {
  font-size: 48px;
  font-weight: 600;
  line-height: 120.833%;
  letter-spacing: -2px;
  max-width: 590px;
}
.footer-widget-wrapper .footer-left-item h2 span {
  font-family: "Inter", serif;
  font-weight: 400;
  color: var(--theme);
  font-style: italic;
}
@media (max-width: 1199px) {
  .footer-widget-wrapper .footer-left-item h2 {
    font-size: 40px;
  }
}
@media (max-width: 767px) {
  .footer-widget-wrapper .footer-left-item h2 {
    font-size: 38px;
  }
}
/* ... */

